# portfolio_manager

./: .coverage  .coveragerc  .env.example  .gitattributes  .gitignore  CLAUDE.md  PRD.md  README.md  pyproject.toml  pytest.ini
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml
docs/: DEVELOPMENT.md  GITHUB_WORKFLOW.md  IMPROVEMENTS.md
portfolio_manager/: __init__.py
portfolio_manager/application/: ports.py
portfolio_manager/application/events/: __init__.py  base_handler.py  event_system.py  market_data_handlers.py  price_handlers.py  rebalancing_handlers.py  risk_handlers.py  trade_handlers.py
portfolio_manager/application/services/: __init__.py  base_service.py  data_ingestion.py  exception_handler.py  portfolio_simulator.py  strategy_scorer.py
portfolio_manager/cli/: __init__.py  data_ingestion.py
portfolio_manager/config/: __init__.py  factory.py  schema.py  settings.py
portfolio_manager/config/defaults/: base.yaml  development.yaml  production.yaml  testing.yaml
portfolio_manager/domain/: entities.py  events.py  exceptions.py  validation.py
portfolio_manager/domain/services/: __init__.py  symbol_mapping.py
portfolio_manager/infrastructure/: __init__.py
portfolio_manager/infrastructure/currency/: __init__.py  currency_service.py
portfolio_manager/infrastructure/data_access/: __init__.py  asset_data_access.py  audit_data_access.py  connection.py  exceptions.py  metrics_data_access.py  portfolio_data_access.py  query_executor.py  schema_manager.py
portfolio_manager/infrastructure/data_providers/: __init__.py  mock_provider.py  provider_factory.py  yfinance_provider.py
portfolio_manager/infrastructure/duckdb/: __init__.py  asset_repository.py  base_repository.py  config.py  connection.py  portfolio_repository.py  query_builder.py  query_executor.py  repository_factory.py
portfolio_manager/infrastructure/duckdb/schema/: __init__.py  migration_manager.py  schema_definitions.py  schema_inspector.py  schema_manager.py  table_builder.py
portfolio_manager/infrastructure/events/: __init__.py  event_bus.py  handlers.py
portfolio_manager/infrastructure/symbol_mapping/: __init__.py  database_symbol_mapper.py  external_symbol_mapper.py  hybrid_symbol_mapper.py
scripts/: README.md  ci-check.ps1  ci-check.sh  example_usage.py  update_version.bat  update_version.py
stockapp/: __init__.py
stockapp/application/: __init__.py  ports.py
stockapp/application/events/: __init__.py  base_handler.py  event_system.py  market_data_handlers.py  price_handlers.py  rebalancing_handlers.py  risk_handlers.py  trade_handlers.py
stockapp/application/services/: __init__.py  base_service.py  data_ingestion.py  exception_handler.py  portfolio_simulator.py  strategy_scorer.py
stockapp/config/: __init__.py  factory.py  schema.py  settings.py
stockapp/config/defaults/: base.yaml  development.yaml  production.yaml
stockapp/domain/: __init__.py  entities.py  events.py  exceptions.py  validation.py
stockapp/infrastructure/: __init__.py  database.py
stockapp/infrastructure/data_access/: __init__.py  asset_data_access.py  audit_data_access.py  connection.py  exceptions.py  metrics_data_access.py  portfolio_data_access.py  query_executor.py  schema_manager.py
stockapp/infrastructure/db/: __init__.py
stockapp/infrastructure/duckdb/: __init__.py  asset_repository.py  base_repository.py  config.py  connection.py  portfolio_repository.py  query_builder.py  query_executor.py  repository_factory.py
stockapp/infrastructure/duckdb/schema/: __init__.py  migration_manager.py  schema_definitions.py  schema_inspector.py  schema_manager.py  table_builder.py
stockapp/infrastructure/events/: __init__.py  event_bus.py  handlers.py
tests/: README.md  __init__.py  conftest.py  run_tests.py  test_100_percent_coverage.py  test_application_services.py  test_application_services_additional.py  test_domain_entities.py  test_domain_entities_additional.py  test_duckdb_integration.py  test_edge_cases_coverage.py  test_final_coverage.py  test_ports_additional.py  test_repository_interfaces.py
tests/end_to_end/: __init__.py  test_data_ingestion_e2e.py  test_data_ingestion_e2e_simple.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_phase1_integration.py
tests/integration/application/: __init__.py  test_event_system_integration.py
tests/integration/application/services/: __init__.py  test_data_ingestion_integration.py  test_data_ingestion_simple.py
tests/integration/cli/: __init__.py  test_data_ingestion_cli.py
tests/integration/config/: test_end_to_end_configuration.py
tests/integration/infrastructure/: __init__.py
tests/integration/infrastructure/data_providers/: __init__.py  test_yfinance_integration.py  test_yfinance_integration_light.py
tests/integration/infrastructure/duckdb/: __init__.py  test_integration.py
tests/integration/infrastructure/symbol_mapping/: test_symbol_mapping_integration.py
tests/performance/: __init__.py  test_data_ingestion_performance.py
tests/unit/: __init__.py
tests/unit/application/: __init__.py  test_event_handlers.py  test_ports.py  test_price_handlers.py  test_risk_handlers.py  test_service_configuration.py  test_services.py
tests/unit/application/services/: test_data_ingestion.py  (+1 more)
tests/unit/config/: test_config_manager.py  test_config_manager_exhaustive.py  test_factory_integration.py  test_schema_validation.py
tests/unit/domain/: __init__.py  test_entities.py  test_entities_final_coverage.py  test_events.py  test_new_events.py
tests/unit/infrastructure/: __init__.py  test_data_access_contracts.py  test_duckdb_coverage.py  test_duckdb_migration_manager_coverage.py  test_duckdb_query_executor_coverage.py  test_duckdb_schema_definitions_coverage.py  test_duckdb_schema_manager_tdd.py  test_event_bus.py  test_event_handlers.py  test_production_event_bus.py  test_repository_factory_config.py
tests/unit/scripts/: test_update_version.py
(+13 files in other folders)
