[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-manager"
version = "0.1.3"
description = "A comprehensive, privacy-focused investment research platform"
readme = "README.md"
license = {text = "GPL-3.0"}
authors = [
    {name = "Fulop Botond", email = "fulopboti@gmail.com"}
]
maintainers = [
    {name = "Fulop Botond", email = "fulopboti@gmail.com"}
]
keywords = ["finance", "investment", "portfolio", "trading", "analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "pydantic>=2.11.7",
    "duckdb>=1.3.2",
    "structlog>=25.4.0",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
    "httpx>=0.28.1",
    "pandas>=2.3.1",
    "numpy>=2.3.2",
    "apscheduler>=3.11.0",
    "websockets>=14.1",
    "jinja2>=3.1.5",
    "aiofiles>=24.1.0",
    "python-multipart>=0.0.20",
    "yfinance>=0.2.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.2.0",
    "pytest-mock>=3.14.0",
    "black>=25.1.0",
    "isort>=5.13.2",
    "ruff>=0.12.8",
    "mypy>=1.17.1",
    "pre-commit>=4.2.0",
    "bandit>=1.8.0",
    "pip-check>=2.9.1",
]
test = [
    "pytest>=8.4.1",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.2.0",
    "pytest-mock>=3.14.0",
]

[project.scripts]
portfolio-manager = "portfolio_manager.cli.main:main"

[project.urls]
Homepage = "https://github.com/example/portfolio-manager"
Documentation = "https://portfolio-manager.readthedocs.io"
Repository = "https://github.com/example/portfolio-manager"
"Bug Tracker" = "https://github.com/example/portfolio-manager/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["portfolio_manager*"]

[tool.setuptools.package-data]
portfolio_manager = ["config/defaults/*.yaml"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["portfolio_manager"]

[tool.ruff]
target-version = "0.1.3"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "0.1.3"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "duckdb.*",
    "structlog.*",
    "pandas.*",
    "numpy.*",
    "apscheduler.*",
    "websockets.*",
    "jinja2.*",
    "aiofiles.*",
    "python_multipart.*",
    "yfinance.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "0.1.3"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests", 
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
    "duckdb: marks tests that require DuckDB database",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["portfolio_manager"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
    "*/env/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]